added links to navbar and search button

--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -1,5 +1,5 @@
 
-#box-wrapper{
+body {
 	background-image: url(../documentation/img/TestPic.jpg);
 	background-size: cover;
 	background-attachment: fixed;
