--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -1,11 +1,24 @@
 
 body {
-	background-image: url(../documentation/img/backgroundopt1.jpg);
+	background-image: url(../documentation/img/pexels-photo-38981.jpeg);
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	min-height: 940px;
+
+}
+
+.block {
+	background-size: contain;
+	background-color: white;
+	position: absolute;
+	display: block;
+	box-sizing: border-box;
+	text-align: center;
+	color: black;
+	font-family: Damascus, Helvetica, Arial;
+	font-size: 14px;
 }
 
 
