--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -6,7 +6,30 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	min-height: 940px;
+	font-family:'ArvoRegular', Georgia, "Times New Roman", Times, Serif;
+	color: black;
+}
 
+ul, menu, dir {
+	display: block;
+	list-style-type: disc;
+	-webkit-margin-before: 1em;
+	-webkit-margin-after: 1em;
+	-webkit-margin-start: 0px;
+	-webkit-margin-end: 0px;
+	-webkit-padding-start: 40px;
+}
+
+.nav {
+	eight: 212px;
+	width: 1154px;
+	position: fixed;
+	z-index: 50;
+	top: 80px;
+	background: url(../images/nav_bk.png) no-repeat right;
+	padding: 70px 0 0px 15px;
+	text-align: center;
+	font-size: 16px;
 }
 
 .block {
@@ -26,6 +49,7 @@ body {
 	background-color: white;
 
 }
+
 
 /*.img-circle{
 	border-radius: 50%;
