--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -1,6 +1,6 @@
 
 body {
-	background-image: url(../documentation/img/pexels-photo-38981.jpeg);
+	background-image: url(../documentation/img/abstract-glare-visual-art.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
@@ -26,7 +26,6 @@ ul, menu, dir {
 	position: fixed;
 	z-index: 50;
 	top: 80px;
-	background: url(../images/nav_bk.png) no-repeat right;
 	padding: 70px 0 0px 15px;
 	text-align: center;
 	font-size: 16px;
