added logo to nav bar

--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -9,7 +9,9 @@ body {
 	font-family:'ArvoRegular', Georgia, "Times New Roman", Times, Serif;
 	color: black;
 }
+.carousel { align-content: center;
 
+}
 ul, menu, dir {
 	display: block;
 	list-style-type: disc;
