--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -42,7 +42,6 @@ h4,
 h5,
 h6 {
 	margin: 0 0 35px;
-	text-transform: uppercase;
 	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -173,7 +172,7 @@ h1.brand-heading {
 		padding: 0;
 	}
 	.intro .intro-body .brand-heading {
-		font-size: 100px;
+		font-size: 175px;
 	}
 	.intro .intro-body .intro-text {
 		font-size: 26px;
@@ -338,9 +337,8 @@ img::-moz-selection {
 body {
 	webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
-
-/*.img-circle{
-	border-radius: 50%;
-	align-items:center;
+.brand-heading {
+	font-family: 'Covered By Your Grace', cursive;
+	font-size: 175px;
 }
 
